# fores

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: config.rs  configuration.rs  constants.rs  directive_mapping.rs  error.rs  fores.rs  lib.rs
src/structs/: mod.rs  sshconfig.rs
src/structs/enums/: addressfamily.rs  loglevel.rs  mod.rs  shared.rs
